--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .hero-parallax {
-  background-image: url("https://images.pexels.com/photos/13914546/pexels-photo-13914546.jpeg?auto=compress&cs=tinysrgb&w=800");
+  background-image: url("https://www.prosportsbackgrounds.com/wp-content/uploads/Golden-State-Warriors-wallpaper-logo-desktop-NBA-2024-2025-thumb.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -49,10 +49,10 @@ body {
 }
 
 .card img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  transition: transform 0.3s ease;
+    width: 100%;
+    height: 256px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
 }
 
 .card:hover img {
