--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ body {
   background-position: center;
 }
 
+i.fas fa-medal mr-1 {
+  color: #ffc107;
+}
+
 .card {
   border-radius: 20px;
   overflow: hidden;
@@ -49,10 +53,10 @@ body {
 }
 
 .card img {
-    width: 100%;
-    height: 256px;
-    object-fit: cover;
-    transition: transform 0.3s ease;
+  width: 100%;
+  height: 256px;
+  object-fit: cover;
+  transition: transform 0.3s ease;
 }
 
 .card:hover img {
